fix: layout problems

--- a/src/app/[locale]/global.css
+++ b/src/app/[locale]/global.css
@@ -145,10 +145,6 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
-  color: var(--color-white);
-}
-
 html,
 body {
   padding: 0;
@@ -165,12 +161,10 @@ body {
     Droid Sans,
     Helvetica Neue,
     sans-serif;
-  height: 100%;
   font-family: 'Rubik', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
-  height: 100%;
 }
 
 div[data-nextjs-scroll-focus-boundary] {
